# bark_monitor

./: .gitignore  404.html  README.md  config.json  index.html  mkdocs.yml  pyproject.toml  recording.json  sitemap.xml
.forgejo/workflows/: publish.yaml  python.yaml
.github/workflows/: snap.yaml
bark_monitor/: base_sync.py  chats.py  fake_sync.py  google_sync.py  next_cloud_sync.py  recorder.py  very_bark_bot.py
bark_monitor/bots/: very_bark_bot.py  very_bark_matrix_bot.py  very_bark_telegram_bot.py
bark_monitor/cli/: get_param.py  record.py  yamnet_lite_record.py  yamnet_record.py
bark_monitor/cli/matrix/: test_bot.py  yamnet_record.py
bark_monitor/cli/telegram/: yamnet_lite_record.py  yamnet_record.py
bark_monitor/plot/: plot_bark.py
bark_monitor/recorders/: base_recorder.py  fake_recorder.py  recorder.py  recorder_base.py  recording.py  wave_recorder.py  yamnet_lite_recorder.py  yamnet_recorder.py
bark_monitor_web/: README.md  pubspec.yaml
bark_monitor_web/lib/: activities.dart  main.dart  settings.dart
bark_monitor_web/linux/: CMakeLists.txt
bark_monitor_web/test/: widget_test.dart
bark_monitor_web/web/: index.html  manifest.json
config/: chats.json  parameters.json
docs/: google_sync.md  index.md  install.md  matrix_bot.md  nextcloud.md  raspberrypi.md  record.md  telegram_bot.md  thingsboard.md
dog_bark/: bark.py  bark_reaction.py  recorder.py  very_bark_bot.py
dog_bark/plot/: plot_bark.py
google_sync/: index.html
install/: index.html
matrix_bot/: index.html
nextcloud/: index.html
raspberrypi/: index.html
record/: index.html
scripts/: bark.py  bot.py  record.py  time_conversion.py
search/: search_index.json
snap/: snapcraft.yaml  snapcraft_pip.yaml
telegram_bot/: index.html
tests/: test_bark.py  test_config_file.py  test_recording.py
tests/data/: recording.json
thingsboard/: index.html
(+7 files in other folders)
