[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bark_monitor"
version = "0.0.1"
description = "A package to see Watson's barks"
authors = [
  { name = "Malcolm Mielle", email = "malcolm.mielle@gmail.com" },
]
readme = "README.md"
dependencies = [
  "Wave>=0.0.2",
  "matplotlib>=3.3.4",
  "numpy>=1.20.0",
  "pandas >= 1.4.2",
  "pyaudio >= 0.2.13",
  "pynput >= 1.7.6",
  "playsound >= 1.3.0",
  "python-telegram-bot >= 20.1",
  "requests >= 2.28.2",
  "scipy >= 1.10.1",
  "pandas >= 1.5.3",
  "jsonpicle >= 3.0.1"
]

[project.scripts]
bark-monitor = "scripts.record:main"