[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bark_monitor"
version = "0.0.1"
description = "A package to see Watson's barks"
authors = [
  { name = "Malcolm Mielle", email = "malcolm.mielle@gmail.com" },
]
readme = "README.md"
dependencies = [
  "Wave>=0.0.2",
  "numpy>=1.20.0",
  "pyaudio >= 0.2.13",
  "python-telegram-bot >= 20.1",
  "requests >= 2.28.2",
  "pandas >= 1.5.3",
  "jsonpickle >= 3.0.1",
  "tensorflow >= 2.12.0",
  "tensorflow-hub >= 0.13.0"
]

[project.scripts]
bark-monitor = "bark_monitor.cli.yamnet_record:main"
bark-monitor-amplitude = "bark_monitor.cli.record:main"